<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/home_background_gradient">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/corona_small"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/awesome_black"
                        android:id="@+id/title"
                        android:text="@string/home_title"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/awesome_black"
                        android:text="@string/help_about_corona"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/home_title"
            android:text="@string/settings_choose_language"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/home_news_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_english"
                        android:id="@+id/english"
                        android:buttonTint="@color/white"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_hindi"
                        android:id="@+id/hindi"
                        android:layout_marginStart="20dp"
                        android:buttonTint="@color/white"
                        android:textColor="@color/white"/>

                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/home_news_subtitle"
            app:cardElevation="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="10dp"
                android:id="@+id/btn_apply"
                android:paddingBottom="10dp"
                android:paddingStart="60dp"
                android:paddingEnd="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@string/apply"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/home_title"
            android:text="@string/settings_live_tracking"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/home_news_title">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/layout_live_tracking"
                android:padding="8dp">

                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/settings_country_live_tracking"
                    android:layout_alignParentStart="true"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/switch_live_track"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/layout_live_district_tracking"
                android:padding="8dp">

                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/district_unsubscribe"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/home_title"
            android:text="@string/settings_notification"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/home_news_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:clickable="true"
                   android:focusable="true"
                   android:background="?android:attr/selectableItemBackground"
                   android:id="@+id/layout_app_update"
                   android:padding="8dp">

                   <TextView
                       android:textSize="18sp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/white"
                       android:text="@string/settings_notification_app_update"
                       android:layout_alignParentStart="true"/>

                   <androidx.appcompat.widget.SwitchCompat
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentEnd="true"
                       android:id="@+id/app_update"/>

               </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_marginTop="10dp"
                    android:id="@+id/layout_in_focus"
                    android:padding="8dp">

                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/settings_notification_in_focus"
                        android:layout_alignParentStart="true"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/in_focus"/>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/layout_social_news"
                    android:padding="8dp">

                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/settings_notification_social_news"
                        android:layout_alignParentStart="true"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/social_news"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_marginTop="10dp"
                    android:id="@+id/layout_social_list"
                    android:padding="8dp">

                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/settings_notification_social_list"
                        android:layout_alignParentStart="true"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/social_list"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/layout_helpline"
                    android:padding="8dp">

                    <TextView
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/settings_notification_helpline"
                        android:layout_alignParentStart="true"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/helpline"/>

                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>